--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,8 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: butterfly
 
-# Deployment
-## Docs: https://hexo.io/docs/one-command-deployment
-deploy:
-  type: ''
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
