--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -25,7 +25,7 @@ jobs:
           
       - name: Run Doc Converter
         run: |
-          TZ=Asia/Shanghai CLASSPATH=aspose-words.jar scripts/process_pending_doc.sh
+          TZ=Asia/Shanghai groovy -cp aspose-words.jar scripts/process_pending_doc.groovy
 
       - name: Commit
         uses: stefanzweifel/git-auto-commit-action@v4
