--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -36,7 +36,7 @@ jobs:
           
       - name: Run Doc Converter
         run: |
-          TZ=Asia/Shanghai groovy -cp aspose-words.jar scripts/process_pending_doc.groovy
+          TZ=Asia/Shanghai groovy -cp aspose-words.jar pending/doc/process.groovy
 
       - name: Commit
         uses: stefanzweifel/git-auto-commit-action@v4
