--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -3,6 +3,8 @@ name: Convert Pending Documents
 on:
   pull_request:
     branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
